// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Avatar with avatar-configurator like readyplayerme-full 1`] = `
<div>
  <div
    class="memori--avatar-wrapper memori--avatar-avatar-configurator"
  >
    <div
      class="memori--blob-container"
    >
      <div
        class="memori-blob"
      >
        <div
          class="mainDiv"
        />
        <div
          class="mainDiv"
        />
        <div
          class="mainDiv"
        />
        <div
          class="mainDiv"
        />
        <div
          class="mainDiv"
        />
      </div>
    </div>
  </div>
  <div
    class="memori--avatar-toggle"
  >
    <button
      aria-label="hide"
      class="memori-button memori-button--ghost memori-button--md"
      tabindex="0"
      type="button"
    >
      <span
        class="memori-button__icon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye-off"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
          />
          <path
            d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
          />
          <path
            d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
          />
          <path
            d="m2 2 20 20"
          />
        </svg>
      </span>
      <span
        class="memori-button__content"
      >
        <span
          class="memori--avatar-toggle-text"
        >
          hide
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Avatar with avatar-configurator on totem layout unchanged 1`] = `
<div>
  <div
    class="memori--avatar-wrapper memori--avatar-avatar-configurator"
  >
    <div
      class="memori--blob-container"
    >
      <div
        class="memori-blob"
      >
        <div
          class="mainDiv"
        />
        <div
          class="mainDiv"
        />
        <div
          class="mainDiv"
        />
        <div
          class="mainDiv"
        />
        <div
          class="mainDiv"
        />
      </div>
    </div>
  </div>
  <div
    class="memori--avatar-toggle"
  >
    <button
      aria-label="hide"
      class="memori-button memori-button--ghost memori-button--md"
      tabindex="0"
      type="button"
    >
      <span
        class="memori-button__icon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye-off"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
          />
          <path
            d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
          />
          <path
            d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
          />
          <path
            d="m2 2 20 20"
          />
        </svg>
      </span>
      <span
        class="memori-button__content"
      >
        <span
          class="memori--avatar-toggle-text"
        >
          hide
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Avatar with blob and avatar in blob unchanged 1`] = `
<div>
  <div
    class="memori--blob-container"
  >
    <div
      class="memori-blob"
    >
      <figure>
        <img
          alt=""
          role="presentation"
          src="https://aisuru.com/images/aisuru/square_logo.png"
        />
      </figure>
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
    </div>
  </div>
</div>
`;

exports[`renders Avatar with custom glb model unchanged 1`] = `
<div>
  <div
    class="memori--blob-container"
  >
    <div
      class="memori-blob"
    >
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
    </div>
  </div>
</div>
`;

exports[`renders Avatar with rpm 3d avatar unchanged 1`] = `
<div>
  <div
    class="memori--blob-container"
  >
    <div
      class="memori-blob"
    >
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
    </div>
  </div>
</div>
`;

exports[`renders defualt Avatar (blob) unchanged 1`] = `
<div>
  <div
    class="memori--blob-container"
  >
    <div
      class="memori-blob"
    >
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
    </div>
  </div>
</div>
`;
